# pre-commit-sphinx

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg
src/pre_commit_sphinx/: __init__.py  build_docs.py
