[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_sphinx"
version = "0.2.0"
authors = [
  { name="Tom Clark (thclark)" },
  { name="Sebastian Steinbeißer", email="Sebastian.Steinbeisser@lrz.de" },
  { name="Alexander Zeller", email="Alexander.Zeller@lrz.de" },
]
description = "Pre-commit hooks to check that sphinx docs build correctly."
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
build-docs = "pre_commit_sphinx.build_docs:main"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.bandit]
exclude_dirs = ["*user_auth.py"]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pylint]
disable = [
  "C0302", # too many lines
  "C0325", # superfluous-parens
  "R0801", # duplicate-code
  "R0912", # too-many-branches
  "R0913", # too-many-arguments
  "R0914", # too-many-locals
  "R0915", # too-many-statements
]
max-line-length = 120
ignore = [".git", "__pycache__"]
j = 0
reports = true

[tool.isort]
line_length = 120
profile = "black"
force_grid_wrap = 2
multi_line_output = 3

[tool.mypy]
exclude = "(.git|__pycache__)"

[tool.pydocstyle]
convention = "numpy"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", "C901",
  "D203", "D212", "D413",
  "ERA001",
  "FBT001", "FBT002",
  "PLR0912", "PLR0913", "PLR0915", "PLR2004",
  "PTH123",
  "S108", "S501",
]
